--- a/plantseg/resources/models_zoo.yaml
+++ b/plantseg/resources/models_zoo.yaml
@@ -2,69 +2,83 @@
 # OwnCould link is obtained by creating a Public Link to a directory: <OC_BASE_URL>/s/<dir ID>/download?path...?files=
 
 ## Aliases for best performing networks for confocal and light-sheet
-generic_confocal_3d_unet:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds2x&files=
+generic_confocal_3D_unet:
+  model_url: https://zenodo.org/record/7768223/files/unet3d-arabidopsis-ovules-confocal-ds2x.pytorch
   resolution: [0.235, 0.150, 0.150]
-  description: "Unet trained on confocal images on 1/2-resolution in XY with BCEDiceLoss."
-generic_light_sheet_3d_unet:
+  description: "Unet trained on confocal images of Arabidopsis Ovules on 1/2-resolution in XY with BCEDiceLoss."
+generic_light_sheet_3D_unet:
   model_url: https://zenodo.org/record/7765026/files/unet3d-lateral-root-lightsheet-ds1x.pytorch
   resolution: [0.25, 0.1625, 0.1625]
-  description: "Unet trained on light-sheet images on original resolution with BCEDiceLoss."
+  description: "Unet trained on light-sheet images of Arabidopsis Lateral Root Primordia on original resolution with BCEDiceLoss."
 
 ## Ovules
-confocal_unet_bce_dice_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds1x&files=
+confocal_3D_unet_ovules_ds1x:
+  model_url: https://zenodo.org/record/7772553/files/unet3d-arabidopsis-ovules-confocal-ds1x.pytorch
   resolution: [0.235, 0.075, 0.075]
-  description: "Unet trained on confocal images on original resolution with BCEDiceLoss."
-confocal_unet_bce_dice_ds2x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds2x&files=
+  description: "Unet trained on confocal images of Arabidopsis Ovules on original resolution with BCEDiceLoss."
+confocal_3D_unet_ovules_ds2x:
+  model_url: https://zenodo.org/record/7768223/files/unet3d-arabidopsis-ovules-confocal-ds2x.pytorch
   resolution: [0.235, 0.150, 0.150]
-  description: "Unet trained on confocal images on 1/2-resolution in XY with BCEDiceLoss."
-confocal_unet_bce_dice_ds3x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds3x&files=
+  description: "Unet trained on confocal images of Arabidopsis Ovules on 1/2-resolution in XY with BCEDiceLoss."
+confocal_3D_unet_ovules_ds3x:
+  model_url: https://zenodo.org/record/7772532/files/unet3d-arabidopsis-ovules-confocal-ds3x.pytorch
   resolution: [0.235, 0.225, 0.225]
-  description: "Unet trained on confocal images on 1/3-resolution in XY with BCEDiceLoss."
-confocal_2D_unet_bce_dice_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2F2dunet_bce_dice_ds1x&files=
-  resolution: [1., 0.075, 0.075]
-  description: "2D Unet trained on z-slices of confocal images on original resolution with BCEDiceLoss."
-confocal_2D_unet_bce_dice_ds2x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2F2dunet_bce_dice_ds2x&files=
+  description: "Unet trained on confocal images of Arabidopsis Ovules on 1/3-resolution in XY with BCEDiceLoss."
+confocal_2D_unet_ovules_ds2x:
+  model_url: https://zenodo.org/record/7772709/files/confocal_2D_unet_ovules_ds2x.pytorch
   resolution: [1., 0.150, 0.150]
-  description: "2D Unet trained on z-slices of confocal images (1/2-resolution in XY) with BCEDiceLoss."
-confocal_2D_unet_bce_dice_ds3x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2F2dunet_bce_dice_ds3x&files=
-  resolution: [1., 0.225, 0.225]
-  description: "2D Unet trained on z-slices of confocal images (1/3-resolution in XY) with BCEDiceLoss."
-confocal_unet_bce_dice_nuclei_stain_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_nuclei_stain_ds1x&files=
+  description: "2D Unet trained on z-slices of confocal images of Arabidopsis Ovules (1/2-resolution in XY) with BCEDiceLoss."
+
+confocal_3D_unet_ovules_nuclei_ds1x:
+  model_url: https://zenodo.org/record/7774321/files/confocal_3D_unet_ovules_nuclei_ds1x.pytorch
   resolution: [0.35, 0.1, 0.1]
-  description: "Unet trained on confocal images of nuclei on original resolution with BCEDiceLoss. The network predicts 1 channel: nuclei probability maps"
+  description: "Unet trained on confocal images of Arabidopsis Ovules nuclei stain on original resolution with BCEDiceLoss. The network predicts 1 channel: nuclei probability maps"
 
 ## Root
-lightsheet_unet_bce_dice_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_ds1x&files=
+lightsheet_3D_unet_root_ds1x:
+  model_url: https://zenodo.org/record/7765026/files/unet3d-lateral-root-lightsheet-ds1x.pytorch
   resolution: [0.25, 0.1625, 0.1625]
-  description: "Unet trained on light-sheet images on original resolution with BCEDiceLoss."
-lightsheet_unet_bce_dice_nuclei_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_nuclei_ds1x&files=
-  resolution: [0.25, 0.1625, 0.1625]
-  description: "Unet trained on light-sheet images of nuclei on original resolution with BCEDiceLoss. The network predicts 2 channels: nuclei mask in the 1st channel, nuclei boundaries in the 2nd channel"
-lightsheet_unet_bce_dice_ds2x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_ds2x&files=
+  description: "Unet trained on light-sheet images of Lateral Root Primordia on original resolution with BCEDiceLoss."
+lightsheet_3D_unet_root_ds2x:
+  model_url: https://zenodo.org/record/7774122/files/unet3d-lateral-root-lightsheet-ds2x.pytorch
   resolution: [0.25, 0.325, 0.325]
-  description: "Unet trained on light-sheet images on 1/2-resolution in XY with BCEDiceLoss."
-lightsheet_unet_bce_dice_ds3x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_ds3x&files=
+  description: "Unet trained on light-sheet images of Lateral Root Primordia on 1/2-resolution in XY with BCEDiceLoss."
+lightsheet_3D_unet_root_ds3x:
+  model_url: https://zenodo.org/record/7774145/files/unet3d-lateral-root-lightsheet-ds3x.pytorch
   resolution: [0.25, 0.4875, 0.4875]
-  description: "Unet trained on light-sheet images on 1/3-resolution in XY with BCEDiceLoss."
+  description: "Unet trained on light-sheet images of Lateral Root Primordia on 1/3-resolution in XY with BCEDiceLoss."
+lightsheet_2D_unet_root_ds1x:
+  model_url: https://zenodo.org/record/7774537/files/unet2d-lateral-root-lightsheet.pytorch
+  resolution: [0.25, 0.1625, 0.1625]
+  description: "2D Unet trained on z-slices of light-sheet images of Lateral Root Primordia on original resolution with BCEDiceLoss."
+
+lightsheet_3D_unet_root_nuclei_ds1x:
+  model_url: https://zenodo.org/record/7774421/files/unet3d-lateral-root-nuclei-lightsheet.pytorch
+  resolution: [0.25, 0.1625, 0.1625]
+  description: "Unet trained on light-sheet images of Lateral Root Primordia nuclei on original resolution with BCEDiceLoss. The network predicts 2 channels: nuclei mask in the 1st channel, nuclei boundaries in the 2nd channel"
+
+lightsheet_2D_unet_root_nuclei_ds1x:
+  model_url: https://zenodo.org/record/7774563/files/unet2d-lateral-root-nuclei-lightsheet.pytorch
+  resolution: [0.25, 0.1625, 0.1625]
+  description: "2D Unet trained on z-slices of light-sheet images of Lateral Root Primordia nuclei on original resolution with BCEDiceLoss. The network predicts 2 channels: nuclei mask in the 1st channel, nuclei boundaries in the 2nd channel"
 
 # PNAS
-confocal_PNAS_2d:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FPNAS%2Fconfocal_PNAS_2d&files=
+confocal_2D_unet_apical_stem_cells:
+  model_url: https://zenodo.org/record/7772721/files/confocal_2d_unet_apical_stem.pytorch
   resolution: [1., 0.25, 0.25]
   description: "2D Unet trained on z-slices of confocal images of Arabidopsis thaliana apical stem cell: https://www.repository.cam.ac.uk/handle/1810/262530"
-confocal_PNAS_3d:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FPNAS%2Fconfocal_PNAS_3d&files=
+confocal_3D_unet_apical_stem_cells:
+  model_url: https://zenodo.org/record/7768142/files/confocal_pnas_3d.pytorch
   resolution: [0.25, 0.25, 0.25]
   description: "3D Unet trained on confocal images of Arabidopsis thaliana apical stem cell: https://www.repository.cam.ac.uk/handle/1810/262530"
+
+# Mouse embryo ex vivo
+lightsheet_3d_unet_mouse_embryo_cells:
+  model_url: https://zenodo.org/record/7774490/files/unet-bce-dice-cell-boundary-311021.pytorch
+  resolution: [1.0, 0.2, 0.2]
+  description: "A a variant of 3D U-Net trained to predict the cell boundaries in live light-sheet images of ex-vivo developing mouse embryo. Voxel size: (0.2×0.2×1 µm^3) (XYZ)"
+
+confocal_3d_unet_mouse_embryo_nuclei:
+  model_url: https://zenodo.org/record/7774505/files/unet-bce-dice-ab-nuclei-boundary-090121.pytorch
+  resolution: [1.0, 0.2, 0.2]
+  description: "A 3D U-Net trained to predict the nuclei and their boundaries in fixed confocal images of developing mouse embryo. Voxel size: (0.2×0.2×1 µm^3) (XYZ)"
